2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* madvise.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add madvise.c.
	* pager.h (pager_advice_normal, pager_advice_random,
	pager_advice_sequential, pager_advice_willneed,
	pager_advice_dontneed): Define.
	(pager_advise_t): New typedef.
	(struct pager): Add field advise.
	* anonymous.c (advise): New function.
	(anonymous_pager_alloc): Set ANON->PAGER.ADVISE to it.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): Use %p, not %x, for printing a pointer.
	When printing addresses, be sure to wrap them in ADDR_PRINTF.
	Remove a gratuitous ADDR_FMT.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_deinit): Drop PAGER->LOCK before calling
	MAP_DESTROY.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* mprotect.c (mprotect): Tweak debugging output.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (mdestroy) [! NDEBUG]: Don't void capability slots,
	we destroy the associated objects, which does that.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c (as_dump_path_rel): Don't return anything.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c [RM_INTERN]: Include "../viengoos/profile.h".
	(as_lookup_rel): Instrument.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_alloc): Don't set SLOT's shadow object to
	ADDR if it is a page, leave it as NULL.
	(shadow_setup): Don't set the shadow page's shadow capability to
	SHADOW.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_alloc): When calling rm_folio_object_alloc to
	allocate storage on behalf of the caller, use ACTIVITY, not
	META_DATA_ACTIVITY, as the principal.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* mprotect.c (mprotect): Only update the capabilities in the
	region if access is being downgraded.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_dump_path_rel): New declaration.
	(as_dump_path) [! RM_INTERN]: New function.